[package]
name = "sergio_ws"
description = "A fast RFC6455 WebSocket implementation"
version = "0.10.1"
authors = ["Arno Dutra <arno.dutra@centrale-med.fr>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/arno-dutra/SergioWs"

[dependencies]
tokio = { version = "1.25.0", default-features = false, features = ["io-util"] }
simdutf8 = { version = "0.1.5", optional = true }
hyper-util = { version = "0.1.0", features = ["tokio"], optional = true }
http-body-util = { version = "0.1.0", optional = true }
hyper = { version = "1", features = [
    "http1",
    "server",
    "client",
], optional = true }
pin-project = { version = "1.0.8", optional = true }
base64 = { version = "0.22.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
utf-8 = "0.7.5"
rand = "0.9.3"
thiserror = "1.0.40"
bytes = "1.5.0"

# Axum integration
axum-core = { version = "0.5.0", optional = true }
http = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = ["simd"]
upgrade = [
    "hyper",
    "pin-project",
    "base64",
    "sha1",
    "hyper-util",
    "http-body-util",
]
simd = ["simdutf8"]
# Axum integration
with_axum = ["axum-core", "http", "async-trait"]

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full", "macros"] }
tokio-rustls = "0.26.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1", features = ["http1", "server", "client"] }
assert2 = "0.3.4"
trybuild = "1.0.80"
criterion = "0.5.1"
anyhow = "1.0.71"
webpki-roots = "1.0"
bytes = "1.4.0"
axum = "0.8.1"

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade", "with_axum"]

[[test]]
name = "setup"
path = "tests/setup.rs"
required-features = ["upgrade"]